--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,4 @@ script:
   - npm run build
   - npm run cover
 
-# Send coverage data to Coveralls
-after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
+after_success: npm run coverage
