--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "lint": "tslint -p tsconfig.json",
     "test": "mocha --reporter spec test/**/*",
-    "cover": "istanbul cover node_modules/mocha/bin/_mocha test/**/* - --R spec",
+    "cover": "nyc mocha test/**/*",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
@@ -41,8 +42,8 @@
     "@types/uuid": "^3.4.4",
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
-    "istanbul": "^0.4.5",
     "mocha": "^6.0.0",
+    "nyc": "^13.3.0",
     "sinon": "^7.2.4",
     "sinon-chai": "^3.3.0",
     "tslint": "^5.12.1",
