--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   ],
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.js\"",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "test": "mocha --reporter spec test/**/*",
-    "cover": "nyc mocha test/**/*",
+    "test": "mocha -r ts-node/register --reporter spec test/**/*",
+    "cover": "nyc mocha -r ts-node/register test/**/*",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
@@ -32,6 +31,11 @@
     "queue",
     "typescript"
   ],
+  "nyc": {
+    "extension": [
+      ".ts"
+    ]
+  },
   "author": "energizer91",
   "license": "BSD-3-Clause",
   "bugs": {
@@ -39,7 +43,11 @@
   },
   "homepage": "https://github.com/energizer91/smart-request-balancer#readme",
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/debug": "^4.1.1",
+    "@types/mocha": "^5.2.6",
+    "@types/sinon": "^7.0.6",
+    "@types/sinon-chai": "^3.2.2",
     "@types/uuid": "^3.4.4",
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
@@ -48,6 +56,7 @@
     "prettier": "^1.16.4",
     "sinon": "^7.2.4",
     "sinon-chai": "^3.3.0",
+    "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.3"
