Remove unused default params

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     ]
   },
   "author": "energizer91",
-  "license": "BSD-3-Clause",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/energizer91/smart-request-balancer/issues"
   },
