--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
           npm run test
           npm run build
           npm run cover
-          nyc report --reporter=text-lcov
+          npm run coverage
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
         with:
