Redirect coverage results to file

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel: true
-          path-to-lcov: ./coverage/lcov.info # optional (default value)
+          path-to-lcov: ./lcov.info # optional (default value)
 
       - name: Coveralls Finished
         uses: coverallsapp/github-action@master
