--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/chai": "^4.1.7",
     "@types/debug": "^4.1.1",
     "@types/mocha": "^5.2.6",
+    "@types/node": "^13.5.3",
     "@types/sinon": "^7.0.6",
     "@types/sinon-chai": "^3.2.2",
     "@types/uuid": "^3.4.4",
