--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "test": "mocha -r ts-node/register --reporter spec test/**/*",
@@ -51,8 +51,8 @@
     "@types/sinon-chai": "^3.2.2",
     "@types/uuid": "^3.4.4",
     "chai": "^4.2.0",
-    "coveralls": "^3.0.2",
-    "mocha": "^6.0.0",
+    "coveralls": "3.1.1",
+    "mocha": "10.1.0",
     "nyc": "^13.3.0",
     "prettier": "^1.16.4",
     "sinon": "^7.2.4",
@@ -62,8 +62,5 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.3"
   },
-  "dependencies": {
-    "debug": "^4.1.1",
-    "uuid": "^3.3.2"
-  }
+  "dependencies": {}
 }
