--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "test": "mocha -r ts-node/register --reporter spec test/**/*",
-    "cover": "nyc mocha -r ts-node/register test/**/*",
-    "coverage": "nyc report --reporter=text-lcov > lcov.info",
+    "test": "jest",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
@@ -43,24 +41,20 @@
   },
   "homepage": "https://github.com/energizer91/smart-request-balancer#readme",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/chai": "^4.1.7",
     "@types/debug": "^4.1.1",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^13.5.3",
-    "@types/sinon": "^7.0.6",
-    "@types/sinon-chai": "^3.2.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.12",
     "@types/uuid": "^3.4.4",
-    "chai": "^4.2.0",
     "coveralls": "3.1.1",
-    "mocha": "10.1.0",
-    "nyc": "^13.3.0",
+    "jest": "^29.7.0",
     "prettier": "^1.16.4",
-    "sinon": "^7.2.4",
-    "sinon-chai": "^3.3.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.3.3"
+    "typescript": "^4.3.3"
   },
   "dependencies": {}
 }
